add html fixing vis js-beautify

--- a/tests/forms.html
+++ b/tests/forms.html
@@ -207,8 +207,7 @@
 						<input class="o-form-input" type="email" id="email-required" required>
 						<label class="o-form-floating-label" for="email-required">Requires an email</label>
 						<span class="o-form-trail">
-							<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:alert"
-								data-inline="false"></span>
+							<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:alert" data-inline="false"></span>
 						</span>
 					</div>
 					<span class="o-form-help-text">This is a required field</span>
@@ -306,8 +305,7 @@
 					</div>
 					<div class="o-form-group has-icon">
 						<span class="o-form-lead">
-							<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:calendar-blank"
-								data-inline="false"></span>
+							<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:calendar-blank" data-inline="false"></span>
 						</span>
 						<input class="o-form-input" type="date" id="birthday">
 						<label class="o-form-floating-label" for="birthday">Birthday</label>
@@ -323,16 +321,14 @@
 					<div class="o-row">
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:github"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:github" data-inline="false"></span>
 							</span>
 							<input class="o-form-input" type="text" id="github-account">
 							<label class="o-form-floating-label" for="github-account">Github</label>
 						</div>
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:web"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:web" data-inline="false"></span>
 							</span>
 							<span class="o-form-prefix">https://</span>
 							<input class="o-form-input" type="text" id="website-url">
@@ -340,16 +336,14 @@
 						</div>
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:map-marker"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:map-marker" data-inline="false"></span>
 							</span>
 							<input class="o-form-input" type="text" id="location-field">
 							<label class="o-form-floating-label" for="location-field">Location</label>
 						</div>
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:twitter"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:twitter" data-inline="false"></span>
 							</span>
 							<span class="o-form-prefix">@</span>
 							<input class="o-form-input" type="text" id="twitter-account">
@@ -359,16 +353,14 @@
 					<div class="o-row">
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:facebook"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:facebook" data-inline="false"></span>
 							</span>
 							<input class="o-form-input" type="text" id="facebook-account">
 							<label class="o-form-floating-label" for="facebook-account">Facebook</label>
 						</div>
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:google"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:google" data-inline="false"></span>
 							</span>
 							<input class="o-form-input o-form-input-right" type="text" id="google-account">
 							<label class="o-form-floating-label" for="google-account">Google</label>
@@ -376,16 +368,14 @@
 						</div>
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:skype"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:skype" data-inline="false"></span>
 							</span>
 							<input class="o-form-input" type="text" id="skype-account">
 							<label class="o-form-floating-label" for="skype-account">Skype</label>
 						</div>
 						<div class="o-col o-form-group has-icon">
 							<span class="o-form-lead">
-								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:youtube"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-form-leading-icon" data-icon="mdi:youtube" data-inline="false"></span>
 							</span>
 							<input class="o-form-input" type="text" id="youtube-account">
 							<label class="o-form-floating-label" for="youtube-account">Youtube</label>
