--- a/tests/normalize-test.html
+++ b/tests/normalize-test.html
@@ -295,9 +295,7 @@
 			<div class="test-run">
 				<a href="#non">
 					<!-- scaled-up 1px image -->
-					<img style="background-color:#ADD8E6"
-						src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="100"
-						height="100" alt="">
+					<img style="background-color:#ADD8E6" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="100" height="100" alt="">
 				</a>
 			</div>
 
@@ -323,9 +321,7 @@
 			<h3 class="test-it">should have margins</h3>
 			<div class="test-run" style="outline:1px solid #ADD8E6; overflow:hidden;">
 				<figure>
-					<img style="background-color:#ADD8E6"
-						src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="400"
-						height="200" alt="">
+					<img style="background-color:#ADD8E6" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="400" height="200" alt="">
 				</figure>
 			</div>
 
