--- a/tests/test-bar.html
+++ b/tests/test-bar.html
@@ -17,8 +17,7 @@
 		<link href="../../dist/css/utilities.1.1.0.css" rel="stylesheet">
 		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-		<link type="text/css" rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-dark.min.css">
+		<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-dark.min.css">
 
 		<style>
 			.wrap {
@@ -51,8 +50,7 @@
 						</div>
 						<div class="o-bar-right">
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="More...">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:more-vert"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:more-vert" data-inline="false"></span>
 							</a>
 						</div>
 					</div>
@@ -64,9 +62,7 @@
 						<div class="o-bar-left">
 							<a class="o-bar-item o-action o-bar-profile" href="#" data-toggle="profile">
 								<span class="o-avatar-wrap o-bar-avatar">
-									<img class="o-avatar"
-										src="https://avatars2.githubusercontent.com/u/73081?v=4&amp;s=460"
-										alt="User Avatar">
+									<img class="o-avatar" src="https://avatars2.githubusercontent.com/u/73081?v=4&amp;s=460" alt="User Avatar">
 									<span class="o-avatar-online o-bar-avatar-online"></span>
 								</span>
 								<span class="o-bar-user" style="color: #009900;">
@@ -76,10 +72,8 @@
 							</a>
 						</div>
 						<div class="o-bar-right">
-							<a class="o-bar-item o-action" href="#" data-toggle="menu" data-tooltip="true"
-								title="Post Actions">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:more-vert"
-									data-inline="false"></span>
+							<a class="o-bar-item o-action" href="#" data-toggle="menu" data-tooltip="true" title="Post Actions">
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:more-vert" data-inline="false"></span>
 							</a>
 						</div>
 					</div>
@@ -91,26 +85,21 @@
 						<div class="o-bar-left"></div>
 						<div class="o-bar-right">
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Search...">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:search"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:search" data-inline="false"></span>
 							</a>
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Notifications">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:bell-outline"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:bell-outline" data-inline="false"></span>
 								<span class="o-tag o-action-badge">2</span>
 								<span class="o-action-text u-sr-only">Notifications</span>
 							</a>
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Private Messages">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:inbox"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:inbox" data-inline="false"></span>
 								<span class="o-tag o-action-badge">103</span>
 								<span class="o-action-text u-sr-only">Private Messages</span>
 							</a>
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Hanakin">
 								<span class="o-avatar-wrap o-bar-avatar">
-									<img class="o-avatar"
-										src="https://avatars2.githubusercontent.com/u/73081?v=4&amp;amp;s=46"
-										alt="User Avatar">
+									<img class="o-avatar" src="https://avatars2.githubusercontent.com/u/73081?v=4&amp;amp;s=46" alt="User Avatar">
 									<span class="o-avatar-online"></span>
 								</span>
 							</a>
@@ -123,37 +112,30 @@
 					<div class="o-bar">
 						<div class="o-bar-left">
 							<span class="o-bar-info">
-								<span class="iconify o-icon o-bar-info-icon" data-icon="mdi:file-outline"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-bar-info-icon" data-icon="mdi:file-outline" data-inline="false"></span>
 								<span class="o-bar-item-text">43</span>
 							</span>
 							<span class="o-bar-info">
-								<span class="iconify o-icon o-bar-info-icon" data-icon="mdi:file-outline"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-bar-info-icon" data-icon="mdi:file-outline" data-inline="false"></span>
 								<span class="o-bar-item-text">43</span>
 							</span>
 							<span class="o-bar-info">
-								<span class="iconify o-icon o-bar-info-icon" data-icon="mdi:file-outline"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-bar-info-icon" data-icon="mdi:file-outline" data-inline="false"></span>
 								<span class="o-bar-item-text">43</span>
 							</span>
 						</div>
 						<div class="o-bar-right">
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Jump To">
-								<span class="iconify o-icon o-action-icon" data-icon="ic:outline-directions"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="ic:outline-directions" data-inline="false"></span>
 							</a>
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Filter">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:filter-variant"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:filter-variant" data-inline="false"></span>
 							</a>
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Sort">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:sort"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:sort" data-inline="false"></span>
 							</a>
 							<a class="o-bar-item o-action" href="#" data-tooltip="true" title="Order">
-								<span class="iconify o-icon o-action-icon" data-icon="mdi:sort-ascending"
-									data-inline="false"></span>
+								<span class="iconify o-icon o-action-icon" data-icon="mdi:sort-ascending" data-inline="false"></span>
 							</a>
 						</div>
 					</div>
