--- a/tests/forms.html
+++ b/tests/forms.html
@@ -13,12 +13,12 @@
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="../../dist/css/core.1.1.0.css" rel="stylesheet">
-		<link href="../../dist/css/utilities.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/core.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/utilities.1.1.0.css" rel="stylesheet">
 
 		<style media="screen">
 			.wrap {
-				margin: 16px 0;
+				padding: 32px 0;
 			}
 
 		</style>
@@ -39,7 +39,7 @@
 
 				<form class="o-form">
 					<div class="o-form-group">
-						<input class="o-form-input" type="text" id="email" placeholder="Email">
+						<input class="o-form-input" type="text" id="email">
 						<label class="o-form-floating-label" for="email">Email</label>
 					</div>
 
@@ -212,11 +212,11 @@
 					</div>
 					<span class="o-form-help-text">This is a required field</span>
 					<div class="o-form-group is-disabled">
-						<input class="o-form-input" type="text" id="disabled" value="I am Disabled" disabled>
+						<input class="o-form-input" type="text" id="disabled" disabled>
 						<label class="o-form-floating-label" for="disabled">Disabled input</label>
 					</div>
 					<div class="o-form-group is-readonly">
-						<input class="o-form-input" type="text" id="readonly" value="I am Read Only" readonly>
+						<input class="o-form-input" type="text" id="readonly" readonly>
 						<label class="o-form-floating-label" for="readonly">Readonly input</label>
 					</div>
 				</form>
