--- a/tests/test-colors.html
+++ b/tests/test-colors.html
@@ -12,18 +12,20 @@
 
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link href="../../dist/css/core.1.1.0.css" rel="stylesheet">
-		<link href="../../dist/css/utilities.1.1.0.css" rel="stylesheet">
-		<link href="../_media/theme.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/core.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/utilities.1.1.0.css" rel="stylesheet">
+		<link href="../docs/_media/theme.1.1.0.css" rel="stylesheet">
 
 		<style>
-			body:not(.ready) {
-				background-color: inherit;
-				color: unset;
+			table,
+			table th {
+				font-size: 14px;
 			}
 
-			body {
-				color: unset;
+			table th,
+			table td,
+			table tbody tr {
+				height: 36px;
 			}
 
 			.color-chart {
