--- a/tests/suit-test.html
+++ b/tests/suit-test.html
@@ -12,8 +12,8 @@
 
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link href="../../dist/css/core.1.1.0.css" rel="stylesheet">
-		<link href="../../dist/css/utilities.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/core.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/utilities.1.1.0.css" rel="stylesheet">
 
 		<style>
 			/*! suit-test v0.1.0 | MIT License | github.com/suitcss */
