--- a/tests/test-bar.html
+++ b/tests/test-bar.html
@@ -13,15 +13,15 @@
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="../../dist/css/core.1.1.0.css" rel="stylesheet">
-		<link href="../../dist/css/utilities.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/core.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/utilities.1.1.0.css" rel="stylesheet">
 		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
 		<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-dark.min.css">
 
 		<style>
 			.wrap {
-				margin: 16px 0;
+				padding: 32px 0;
 			}
 
 			section {
