--- a/tests/test-colors-21.html
+++ b/tests/test-colors-21.html
@@ -12,9 +12,9 @@
 
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link href="../_media/old/theme.0.21.0.css" rel="stylesheet">
-		<link href="../../dist/css/old/core.0.21.0.css" rel="stylesheet">
-		<link href="../../dist/css/old/utilities.0.21.0.css" rel="stylesheet">
+		<link href="../docs/_media/old/theme.0.21.0.css" rel="stylesheet">
+		<link href="../dist/css/old/core.0.21.0.css" rel="stylesheet">
+		<link href="../dist/css/old/utilities.0.21.0.css" rel="stylesheet">
 
 		<style>
 			body:not(.ready) {
