--- a/tests/type.html
+++ b/tests/type.html
@@ -13,13 +13,13 @@
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="../../dist/css/core.1.1.0.css" rel="stylesheet">
-		<link href="../../dist/css/utilities.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/core.1.1.0.css" rel="stylesheet">
+		<link href="../dist/css/utilities.1.1.0.css" rel="stylesheet">
 		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
 		<style media="screen">
 			.wrap {
-				margin: 16px 0;
+				padding: 32px 0;
 			}
 
 		</style>
