--- a/tests/forms.html
+++ b/tests/forms.html
@@ -13,8 +13,8 @@
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="../dist/css/core-dark.1.2.0.css" rel="stylesheet">
-		<link href="../dist/css/utilities.1.2.0.css" rel="stylesheet">
+		<link href="../dist/css/core-dark.1.3.0.css" rel="stylesheet">
+		<link href="../dist/css/utilities.1.3.0.css" rel="stylesheet">
 
 		<style media="screen">
 			.wrap {
@@ -39,12 +39,12 @@
 
 				<form class="o-form">
 					<div class="o-form-group">
-						<input class="o-form-input" type="text" id="email">
+						<input class="o-form-input" type="text" id="email" required>
 						<label class="o-form-floating-label" for="email">Email</label>
 					</div>
 
 					<div class="o-form-group">
-						<input class="o-form-input" type="password" id="password">
+						<input class="o-form-input" type="password" id="password" required>
 						<label class="o-form-floating-label" for="password">Password</label>
 					</div>
 
@@ -66,17 +66,17 @@
 					</fieldset>
 
 					<div class="o-form-group">
-						<input class="o-form-input" type="text" id="first-name-field">
+						<input class="o-form-input" type="text" id="first-name-field" placeholder="First Name">
 						<label class="o-form-floating-label" for="first-name-field">First Name</label>
 					</div>
 
 					<div class="o-form-group">
-						<input class="o-form-input" type="password" id="password-field">
+						<input class="o-form-input" type="password" id="password-field" required>
 						<label class="o-form-floating-label" for="password-field">Password</label>
 					</div>
 
 					<div class="o-form-group">
-						<input class="o-form-input" type="email" id="e-mail">
+						<input class="o-form-input" type="email" id="e-mail" required>
 						<label class="o-form-floating-label" for="e-mail">E-Mail</label>
 					</div>
 					<span class="o-form-help-text">This is helper text.</span>
